--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
       "savePath": "/css"
     }
   ],
-  "liveSassCompile.settings.excludeList": ["/**/node_modules/**", "/.vscode/**"],
+  "liveSassCompile.settings.excludeList": [ "/**/node_modules/**", "/.vscode/**" ],
   "liveSassCompile.settings.generateMap": true,
-  "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
+  "liveServer.settings.port": 1237,
+  "liveSassCompile.settings.autoprefix": false
 }
